apps/trillium/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trillium-service
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: trillium
  type: ClusterIP
